@@ -144,6 +144,17 @@ a security scanner for GNOME.
 configure-thinkpad</a> - an IBM ThinkPad configuration tool.
 </ul>
 
+<ul>
+<li><a href="http://boardgametool.sf.net/">BoardGame Tool</a> -
+a boardgame utility with a C++ front-end built with Glade and
+a Python back-end.
+</ul>
+
+<ul>
+<li><a href="http://www.polyxmass.org">polyxmass</a> -
+a computer framework for mass spectrometry, specifically for polymers.
+</ul>
+ 
 
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
