@@ -1,3 +1,7 @@
+2003-11-18  Damon Chaplin  <damon@gnome.org>
+
+	* apps.html: added boardgametool and polyxmass.
+
 2003-11-09  Damon Chaplin  <damon@gnome.org>
 
 	* download.html: 
